# gestion-comercios

./: .gitignore  Catalogo Petshop.xls  README.md  compilar-instalador.bat  crear-licencia-basica.bat  crear-licencia-mensual.bat  crear-licencia-pro.bat  crear-licencia.bat  importar-supermercado.bat  index.html  iniciar.bat  marcar-pago-licencia.bat  package-lock.json  package.json  playwright.config.ts  renovar-licencia.bat  ventas_resumen.csv
.cursor/rules/: compilar-al-terminar.mdc  e2e-policy.mdc  sync-lan-stability.mdc
.github/workflows/: release.yml
branding/: build-app-icon.ps1
docs/: ACTUALIZACIONES.md  ANTES-DE-VENDER.md  GUIONES-VIDEOS.md  LICENCIAS.md  MENSAJE-PRIVADO.md  PLAN-MENSUAL.md  REQUISITOS-SISTEMA.md  VENTA-MARKETPLACE.md  index.html  lan-sync-numbering.md  plantilla-productos.csv
docs/guias/: whatsapp-turnos-vincular.txt
docs/legal/: ayuda.html  privacidad.html  soporte.html  terminos.html
docs/marketing/: COMO-HACER-IMAGENES.md  portada-mercadolibre.html
docs/oauth/: callback.html
docs/tools/: factura-ia.html  licencias-admin.html
scripts/: _licencias-env.bat  download-catalog-csv.ps1  ensure-catalog-csv.ps1  gen-license-keys.mjs  generar-indice-categorias.ps1  habilitar-releases-publicos.ps1  license-admin.mjs  publicar-catalogo.ps1  publicar-version.ps1  publicar.ps1  qa-repeat.mjs  qa.mjs  release.ps1  set-github-updater-secrets.ps1  setup-github-updater.ps1  subir-catalogo-github.ps1
src/: App.tsx  e2eBridge.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.catalog.json  tauri.conf.e2e.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/credentials/: mp_oauth.example.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_sales.sql  0003_core_infra.sql  0004_customers.sql  0005_brands_suppliers.sql  0006_phase_a.sql  0007_product_expiry.sql  0008_catalog_source.sql  0009_quotes.sql  0010_appointments.sql  0011_remitos_service_orders.sql  0012_vehicles_workflow.sql  0013_workshop_sync.sql  0014_sales_mp_payment.sql  0015_fts_standalone.sql  0016_restore_default_pins.sql  0017_fiscal_arca.sql  0018_workshop_resources.sql  0019_appointment_whatsapp.sql  0020_appointment_notifications_seen.sql  0021_lan_sync.sql  0022_lan_sync_local_id.sql  0023_lan_sync_reliability.sql  0024_production_hardening.sql
src-tauri/src/: acid_tx_tests.rs  arca_commands.rs  backup.rs  batch_void_tests.rs  branding.rs  catalog_setup.rs  commands.rs  connectivity.rs  database.rs  db_maintenance.rs  db_manager.rs  db_path.rs  e2e.rs  export_products.rs  export_sales.rs  fiscal.rs  import_products.rs  lib.rs  license.rs  license_commands.rs  mercadopago.rs  mercadopago_oauth.rs  mp_app_credentials.rs  product_search.rs  receipt.rs  settings_util.rs  spreadsheet.rs  sync_worker.rs  whatsapp_commands.rs  whatsapp_turnos.rs  workshop_sync.rs
src-tauri/src/arca/: auth.rs  config.rs  crypto.rs  errors.rs  mod.rs  models.rs  persistence.rs  secrets.rs  soap.rs  tests.rs  utils.rs  wsaa.rs  wsfe.rs  xml.rs
src-tauri/src/arca/wsfe/: mapper.rs  mod.rs  models.rs  request.rs  response.rs  service.rs  validation.rs
src-tauri/src/lan_sync/: applier.rs  audit_chaos.rs  client.rs  commands.rs  conflict.rs  conflicts.rs  discovery.rs  engine.rs  errors.rs  hardening_tests.rs  mod.rs  models.rs  net_guard.rs  numbering.rs  outbox.rs  protocol.rs  server.rs  state.rs  tests_sync.rs
src-tauri/tests/.e2e-data/manual/catalog/: LEEME.txt
src/components/: AdjustPctInput.tsx  AdminModulesPanel.tsx  AdminPersonalization.tsx  AdminRubroPanel.tsx  AdminSection.tsx  (+58 more)
updater/: README.md  latest.json
(+177 files in other folders)
