[package]
name = "tauri-app"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tauri-app"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gen_catalog_index"
path = "src/bin/gen_catalog_index.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
calamine = "0.26"
zip = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
urlencoding = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"

# ── Integración ARCA (WSAA + WSFEv1) ──
# Criptografía 100% RustCrypto (sin OpenSSL): compila en Windows/Linux/macOS y en
# CI sin Perl ni NASM. La firma CMS/PKCS#7 vive aislada en `src/arca/crypto.rs`.
cms = { version = "0.2", features = ["builder", "std"] }
x509-cert = { version = "0.2", features = ["builder"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
der = { version = "0.7", features = ["alloc", "oid"] }
spki = "0.7"
const-oid = { version = "0.9", features = ["db"] }
quick-xml = "0.36"
aes-gcm = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["clock", "serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
# Solo para tests: generar un par RSA + certificado autofirmado en memoria y
# ejercitar la firma CMS sin depender de material real. No entra al binario.
rand = "0.8"

